force-app/main/default/objects/Case/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <description>Actual End Date of Completing a Change</description>
    <inlineHelpText>Provide Actual End Date</inlineHelpText>
    <label>Actual End Date</label>
    <type>DateTime</type>
</CustomField>