force-app/main/default/objects/Case/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>Actual Start Date of Change Request</description>
    <inlineHelpText>Provide Actual Start Date</inlineHelpText>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>