force-app/main/default/objects/Case/fields/Anticipated_Work_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Work_Return_Date__c</fullName>
    <label>Anticipated Work Return Date</label>
    <type>Date</type>
</CustomField>