force-app/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Approval Status for a Change Request</description>
    <inlineHelpText>If Change Request is Rejected, please review Assessor Comments field for reason</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted to Manager</fullName>
            </value>
            <value>
                <fullName>Approved by Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Manager</fullName>
            </value>
            <value>
                <fullName>Submitted to Legal</fullName>
            </value>
            <value>
                <fullName>Approved by Legal</fullName>
            </value>
            <value>
                <fullName>Rejected by Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>