force-app/main/default/objects/Case/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Change Approval Status</description>
    <inlineHelpText>Change Approval Status</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>