force-app/main/default/objects/Case/fields/Change_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Rejection_Reason__c</fullName>
    <description>Text for Change Assessor to explain the reason for rejection</description>
    <label>Change Rejection Reason</label>
    <type>TextArea</type>
</CustomField>