force-app/main/default/objects/Case/fields/First_Day_Away_from_Work__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Away_from_Work__c</fullName>
    <label>First Day Away from Work</label>
    <type>Date</type>
</CustomField>