force-app/main/default/objects/Case/fields/Letter_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Created_Date__c</fullName>
    <label>Letter Created Date</label>
    <type>DateTime</type>
</CustomField>