force-app/main/default/objects/Case/fields/LOA_Documentation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Documentation_Received_Date__c</fullName>
    <label>LOA Documentation Received Date</label>
    <type>Date</type>
</CustomField>