force-app/main/default/objects/Case/fields/LOA_Documents_Received_from_Employee__c.field-meta.xml
<CustomField>
    <fullName>LOA_Documents_Received_from_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA Documents Received from Employee</label>
    <type>Checkbox</type>
</CustomField>