force-app/main/default/objects/Case/fields/LOA_Eligibility_Verified__c.field-meta.xml
<CustomField>
    <fullName>LOA_Eligibility_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA Eligibility Verified</label>
    <type>Checkbox</type>
</CustomField>