force-app/main/default/objects/Case/fields/LOA_Reason__c.field-meta.xml
<CustomField>
    <fullName>LOA_Reason__c</fullName>
    <label>LOA Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Bonding / Adoption / Childbirth</fullName>
            </value>
            <value>
                <fullName>Extended vacation</fullName>
            </value>
            <value>
                <fullName>Family or personal leave</fullName>
            </value>
            <value>
                <fullName>Long-term disability</fullName>
            </value>
            <value>
                <fullName>Military leave</fullName>
            </value>
            <value>
                <fullName>Ongoing education.</fullName>
            </value>
            <value>
                <fullName>Sabbatical</fullName>
            </value>
            <value>
                <fullName>Short-term disability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>