force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Employee Relations - Complaint</fullName>
            </value>
            <value>
                <fullName>Employee Relations - Disciplinary Action</fullName>
            </value>
            <value>
                <fullName>Employee Relations - Wage Issues</fullName>
            </value>
            <value>
                <fullName>Employee Relations - Workspace Safety</fullName>
            </value>
            <value>
                <fullName>Tuition Reimbursement</fullName>
            </value>
            <value>
                <fullName>HR Inquiry</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>HR Transaction - Place Employee on Leave of Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>