force-app/main/default/objects/Case/recordTypes/Idea.recordType-meta.xml
<RecordType>
    <fullName>Idea</fullName>
    <active>true</active>
    <businessProcess>wkdw__HR</businessProcess>
    <description>Idea Cases created from Experience Builder Idea Box</description>
    <label>Idea</label>
</RecordType>